# annotator-rl

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/: generate_dataset.py  prepare_coco.py
data/tasks/task1_fix_bboxes/: samples.json
data/tasks/task1_remove_spurious/: samples.json
data/tasks/task2_fix_classes/: samples.json
data/tasks/task3_batch_audit/: samples.json
data/tasks/task3_find_missing/: samples.json
openenv_annotation_qa_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  corruption.py  environment.py  grader.py  requirements.txt
