[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-annotation-qa-env"
version = "0.1.0"
description = "Annotation QA Environment for OpenEnv — AI agent reviews and corrects flawed ML annotations"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv dependencies
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    # No additional dependencies — pure Python implementation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "annotation_qa_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "annotation_qa_env",
    "annotation_qa_env.server",
    "annotation_qa_env.data",
]
package-dir = {
    "annotation_qa_env" = ".",
    "annotation_qa_env.server" = "server",
    "annotation_qa_env.data" = "data",
}

[tool.setuptools.package-data]
"annotation_qa_env.data" = ["tasks/**/*.json"]
